# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_library",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_library(
    name = "simple_system",
    srcs = ["simple_system.cc"],
    hdrs = ["simple_system.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//systems/framework:leaf_system",
        "//systems/framework:system",
        "//common:essential",
    ],
)

drake_cc_library(
    name = "send_to_visualizer",
    srcs = ["send_to_visualizer.cc", "utilities.cc"],
    hdrs = ["send_to_visualizer.h", "utilities.h"],
    deps = [
        "//systems/primitives:matrix_gain",
        "//systems/framework:diagram",
        "//systems/framework:diagram_builder",
        "//systems/framework:leaf_system",
        "//common:essential",
    ],
)
drake_cc_binary(
    name = "run_sim",
    srcs = [
        "run_sim.cc",
    ],
    deps = [
        ":simple_system",
        ":send_to_visualizer",
        "//common:find_resource",
        "//systems/lcm:lcm_interface_system",
        "//systems/framework:diagram",
        "//systems/framework:diagram_builder",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:signal_logger",
        "//systems/analysis:simulator",
        "//attic/multibody/rigid_body_plant:drake_visualizer",
        "//attic/multibody/parsers",

        "@gflags",
    ],
)